--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,6 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
 MONGODB_URL=YOUR_MONGODB_URL
+
+UPLOADTHING_SECRET=YOUR_UPLOADTHING_SECRET
+UPLOADTHING_APP_ID=YOUR_UPLOADTHING_APP_ID
