--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.400.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
