--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.400.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
+    "nextjs-toploader": "^1.6.12",
     "obscenity": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
